[fix] footerのz-indexを修正

--- a/src/style.css
+++ b/src/style.css
@@ -543,6 +543,7 @@ button:focus {
     bottom: 0 !important;
     padding-top: 10px !important;
     padding-bottom: 8px !important;
+    z-index: 3;
 }
 
 .footer-copywright {
